[gd_scene load_steps=4 format=3 uid="uid://jnomgop3jc72"]

[ext_resource type="Texture2D" uid="uid://bdefmofghrwuk" path="res://GUI/TitleScreen/开始页面.png" id="1_3kimx"]
[ext_resource type="Script" uid="uid://du0wksg8wruyo" path="res://GUI/TitleScreen/title_screen.gd" id="1_itps4"]

[sub_resource type="Theme" id="Theme_itps4"]
Button/font_sizes/font_size = 60
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_itps4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(800, 452)
scale = Vector2(1.5625, 1.56944)
texture = ExtResource("1_3kimx")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0338533, 0.0338533, 0.0338533, 0.192157)

[node name="ButtonNew" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = 7.0
offset_right = 185.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_itps4")
text = "开始新游戏"
language = "zh"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = 120.0
offset_right = 185.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_itps4")
text = "继续游戏"
language = "zh"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="CanvasLayer/Control/ButtonNew" to="." method="start_game"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonContinue" to="." method="load_game"]
